# Slam-From-scratch-and-Navigation

./: CMakeLists.txt  LICENSE  README.md  main.cpp
Astar/: Astar.cpp  Astar.hpp
Communication/: send.hpp
EKF/: PoseEKF.cpp  PoseEKF.hpp  VelocityEKF.cpp  VelocityEKF.hpp
SLAMUtils/: SLAMUtils.cpp  SLAMUtils.hpp
imu/: BNO055.cpp  BNO055.hpp
lidar/: LidarReader.cpp
mapping/: OccupancyGrid.cpp  OccupancyGrid.hpp
navigation/: navigation.cpp  navigation.hpp
trajectoryVizualizer/: Trajviz.cpp  Trajviz.hpp
